--- a/Controls/Source/UIControls/Podfile
+++ b/Controls/Source/UIControls/Podfile
@@ -4,20 +4,20 @@
 target 'UIControls' do
   # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
   use_frameworks!
-pod 'KDCircularProgress'
+  pod 'KDCircularProgress’, :git => 'https://github.com/hb-coe/KDCircularProgress.git'
   pod 'HGCircularSlider', '~> 2.0.0'
   pod 'NVActivityIndicatorView'
   pod 'SSSpinnerButton'
   pod 'RAMAnimatedTabBarController'
-  pod 'MinimalTabBar'
   pod 'JTAppleCalendar', '~> 7.0'
   pod 'FaceAware'
   pod 'Kingfisher' #, '3.2.1'
   pod 'paper-onboarding'
-  pod 'PullToMakeSoup', '~> 2.0'
+  pod 'PullToMakeSoup',  :git => 'https://github.com/hb-coe/PullToMakeSoup.git'
   pod 'EmptyDataSet-Swift', '~> 4.0.5'
   pod 'PullToBounce', :git => 'https://github.com/entotsu/PullToBounce.git'
 
   # Pods for UIControls
 
 end
+
