--- a/Controls/Source/UIControls/UIControls/Info.plist
+++ b/Controls/Source/UIControls/UIControls/Info.plist
@@ -39,5 +39,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>Taking picture to apply face detection</string>
 </dict>
 </plist>
